# aoc-2024

./: .gitignore  Cargo.toml  README.md  index.css  index.html
.github/workflows/: gh-pages-deploy.yml
src/: main.rs
src/day6/: app.rs  game.rs  mod.rs
